# listing_app

./: .env  .gitignore  Dockerfile  crud.py  database.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 58ee05249097_added_initial_table.py
models/: model.py
schemas/: schema.py
src/: dependencies.py  mappers.py
src/entities/db/: listing_db.py  user_db.py
src/entities/web/: category.py  comment.py  favorite.py  listing.py  listing_web.py  photo.py  rank.py  user.py  user_web.py
src/mappers/: category_mapper.py  comment_mapper.py  favorite_mapper.py  listing_mapper.py  mappers.py  parser.py  photo_mapper.py  rank_mapper.py  user_mapper.py
src/repositories/postgres/: category.py  comment.py  database.py  favorite.py  listing.py  photo.py  rank.py  users.py
src/repositories/postgres/pg_tables/: __init__.py  category.py  comment.py  favorite.py  listing.py  photo.py  rank.py  user.py
src/repositories/postgres/services/: listings.py
src/routers/: category.py  comment.py  favorite.py  listings.py  photo.py  users.py
src/services/: categories.py  comment.py  crud.py  favorite.py  listings.py  parser.py  photos.py  ranks.py  users.py
src/settings/: settings.py
src/templates/: item.html  listing.html
src/tests/: conftest.py  conftest_db.py  conftest_db_2.py  test_fixtures.py  test_sql_app.py  test_user.py
