[tool.poetry]
name = "listing-app"
version = "0.1.0"
description = ""
authors = ["Sergei Eremkin <ffr@list.ru>"]
readme = "README.md"
packages = [{include = "listing_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
beautifulsoup4 = "^4.12.2"
sqlalchemy-utils = "^0.41.1"
sqlalchemy-imageattach = "^1.1.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
httpx = "^0.24.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
